--- a/css/style.css
+++ b/css/style.css
@@ -1,39 +1,163 @@
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&family=Outfit:wght@400;700&display=swap");
+
 * {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+  font-family: "Open Sans", sans-serif;
 }
 
 :root {
-  --background-color: #222327;
+  --background-01: #09090A;
+  --background-02: #ffffff;
+  --indicator-01: #C8BCF6;
+  --text-01: #09090A;
+  --transition-05: all 0.5s ease;
 }
 
 body {
-  background: var(--background-color);
+  background: var(--background-01);
+}
+
+section {
+  display: flex;
+  justify-content: center;
+  width: 100vw;
 }
 
 .nav-menu {
   position: fixed;
+  background: var(--background-02);
+  max-width: 400px;
+  width: 100%;
+  height: 78px;
+  bottom: 50px;
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 100vw;
-  bottom: 0;
+  border-radius: 10px;
 }
 
 .nav-menu ul {
   display: flex;
-  gap: 25px;
+  max-width: 350px;
+  width: 100%;
 }
 
 ul .list {
+  position: relative;
   list-style: none;
-  display: flex;
-  font-size: 1.4em;
+  width: 70px;
+  height: 70px;
+  z-index: 100;
 }
 
 .list a {
+  position: relative;
   display: flex;
+  justify-content: center;
   flex-direction: column;
   align-items: center;
+  width: 100%;
+  text-align: center;
+  font-weight: 500;
+}
+
+.list a .icon {
+  position: relative;
+  display: block;
+  line-height: 75px;
+  font-size: 1.5em;
+  text-align: center;
+  color: var(--text-01);
+  transition: var(--transition-05);
+}
+
+.list.active a .icon {
+  transform: translateY(-45px);
+}
+
+.list a .text {
+  position: absolute;
+  color: var(--text-01);
+  font-weight: 400;
+  font-size: 0.75em;
+  letter-spacing: 0.05em;
+  transition: var(--transition-05);
+  opacity: 0;
+  transform: translateY(30px);
+}
+
+.list.active a .text {
+  opacity: 1;
+  transform: translateY(10px);
+}
+
+.indicator {
+  position: absolute;
+  width: 70px;
+  height: 70px;
+  background: var(--indicator-01);
+  top: -50%;
+  border-radius: 50%;
+  border: 8px solid var(--background-01);
+  transition: var(--transition-05);
+}
+
+.indicator::before {
+  content: '';
+  position: absolute;
+  top: 58%;
+  left: -23.5px;
+  width: 20px;
+  height: 20px;
+  border-top-right-radius: 20px;
+  background: var(--background-02);
+  box-shadow: 1px -10px 0 0 var(--background-01);
+}
+
+.indicator::after {
+  content: '';
+  position: absolute;
+  top: 58%;
+  right: -23.2px;
+  width: 20px;
+  height: 20px;
+  border-top-left-radius: 20px;
+  background: var(--background-02);
+  box-shadow: 0 -10px 0 0 var(--background-01);
+}
+
+.list:nth-child(1).active~.indicator {
+  transform: translateX(calc(70px * 0));
+}
+
+.list:nth-child(2).active~.indicator {
+  transform: translateX(calc(70px * 1));
+}
+
+.list:nth-child(3).active~.indicator {
+  transform: translateX(calc(70px * 2));
+}
+
+.list:nth-child(4).active~.indicator {
+  transform: translateX(calc(70px * 3));
+}
+
+.list:nth-child(5).active~.indicator {
+  transform: translateX(calc(70px * 4));
+}
+
+.list:nth-child(5).active ion-icon {
+  animation: rotation 5s linear infinite;
+}
+
+@keyframes rotation {
+  from {
+    transform: rotate(0deg);
+  }
+
+  to {
+    transform: rotate(360deg);
+  }
 }
